additional fixes to about us section, add back surpress of scrollbar, add required attr for form,

--- a/src/styles/blocks/_about_us.scss
+++ b/src/styles/blocks/_about_us.scss
@@ -7,17 +7,15 @@
   grid-column: 1 / -1;
   position: relative;
   left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
   width: 100vw;
+  margin-left: -50vw;
 
   .about-us__image {
-    background: url(../images/about-us.png) center;
     width: 100%;
     height: $bg-image-height-s;
-    margin: 0 auto;
+    background: url(../images/about-us.png) center;
     background-size: cover;
+    background-repeat: no-repeat;
 
     @include mixins.on-tablet {
       height: $bg-image-height-m;
