--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -18,6 +18,7 @@
   margin: 0;
   padding: 0;
   min-width: breakpoints.$breakpoint-s;
+  overflow-x: hidden;
 }
 
 .page__menu {
