--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -15,6 +15,7 @@
   margin: 0;
   padding: 0;
   min-width: 320px;
+  overflow-x: hidden;
 }
 
 .page__menu {
@@ -705,18 +706,16 @@ img {
   grid-column: 1 / -1;
   position: relative;
   left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
   width: 100vw;
+  margin-left: -50vw;
 }
 
 .about-us .about-us__image {
-  background: url(../images/about-us.png) center;
   width: 100%;
   height: 200px;
-  margin: 0 auto;
+  background: url(../images/about-us.png) center;
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 @media screen and (min-width: 744px) and (max-width: 1259px) {
